--- a/src/app/Components/Customer/customers/customers.component.html
+++ b/src/app/Components/Customer/customers/customers.component.html
@@ -1,26 +1,96 @@
-<h2>Customer ID Input</h2>
-<div>
-    <label for="customerId">Customer ID:</label>
-    <input type="number" [(ngModel)]="customerId" id="customerId">
-    <button (click)="fetchCustomerDetails()">Get Details</button>
+<div class="details-container">
+
+        <h2>Add Account</h2>
+        <div class="nav-button-container" style="margin-top: 20px;">
+            <button style="float: right;" routerLink="/add-account">Add Account</button>
+        </div>
+    
+
+    <div class="transaction-form-container" style="margin-top: 50px;">
+        <h2>Add Transaction</h2>
+        <form (ngSubmit)="addTransaction()" #transactionForm="ngForm">
+            <div class="input-group">
+                <label for="accountId">Account ID:</label>
+                <input type="number" [(ngModel)]="accountId" id="accountId" required name="accountId">
+            </div>
+
+            <!-- <div class="input-group">
+            <label for="transactionType">Transaction Type:</label>
+            <select id="transactionType" [(ngModel)]="transactionType" name="transactionType">
+              <option value="deposit">Deposit</option>
+              <option value="withdrawal">Withdrawal</option>
+            </select>
+          </div> -->
+
+            <div class="input-group">
+                <label for="amount">Amount:</label>
+                <input type="number" [(ngModel)]="amount" id="amount" required name="amount">
+            </div>
+
+            <button class="transaction-add-button" type="submit" [disabled]="!transactionForm.form.valid">Submit
+                Transaction</button>
+        </form>
+
+        <div *ngIf="transactionErrorMessage" class="error">
+            {{ transactionErrorMessage }}
+        </div>
+        <div *ngIf="transactionSuccessMessage" class="success">
+            {{ transactionSuccessMessage }}
+        </div>
+    </div>
+
+
+    <h2 style="margin-top: 50px;">Customer Details</h2>
+    <div class="input-group">
+        <label for="customerId">Customer ID:</label>
+        <input type="number" [(ngModel)]="customerId" id="customerId">
+        <button (click)="fetchCustomerDetails()">Fetch Details</button>
+    </div>
+
+    <div *ngIf="customerDetails">
+        <h3>Profile</h3>
+        <div>
+            <strong>Name:</strong> {{ customerDetails.result.firstName }} {{ customerDetails.lastName }}
+        </div>
+        <div>
+            <strong>Total Balance:</strong> {{ customerDetails.result.totalBalance }}
+        </div>
+
+        <h3>Accounts</h3>
+        <table class="accounts-table">
+            <thead>
+                <tr>
+                    <th>Account</th>
+                    <th>Balance</th>
+                    <th>Transactions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let account of customerDetails.result.accounts">
+                    <td>{{ account.id }}</td>
+                    <td>{{ account.balance }}</td>
+                    <td>
+                        <table class="transactions-table">
+                            <thead>
+                                <tr>
+                                    <th>Amount</th>
+                                    <th>Date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let transaction of account.transactions">
+                                    <td>{{ transaction.amount }}</td>
+                                    <td>{{ transaction.date | date }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <div *ngIf="errorMessage" class="error">
         {{ errorMessage }}
     </div>
-</div>
-
-<h2>Customer Details</h2>
-<p>Name: {{ customerDetails?.result.firstName }} {{ customerDetails?.result.lastName }}</p>
-<p>Total Balance: {{ customerDetails?.result.totalBalance }}</p>
-
-<h3>Accounts</h3>
-<div *ngFor="let account of customerDetails?.result.accounts">
-    <p>Account ID: {{ account.id }}</p>
-    <p>Balance: {{ account.balance }}</p>
-
-    <h4>Transactions</h4>
-    <ul>
-        <li *ngFor="let transaction of account.transactions">
-            {{ transaction.amount }} at {{ transaction.date }}
-        </li>
-    </ul>
 </div>
